testing paper-offset-plugin fo paper.js

--- a/tmp-convert-strokes/paper-offset-test/index.html
+++ b/tmp-convert-strokes/paper-offset-test/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Demo</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="./demo.css"/>
     <script type="text/javascript" src="./paper-core.min.js"></script>
     <script type="text/javascript" src="./paperjs-offset.js"></script>
