--- a/font/demo.html
+++ b/font/demo.html
@@ -26,17 +26,17 @@
 
       textarea {
         background: #f5f5f5;
-        font-size: 4em;
+        font-size: 15em;
         width: 100%;
-        height: 5em;
+        height: 1em;
       }
   </style>
 </head>
 <body>
   <div id="content">
-    <textarea class="openmoji-color">ABC 👨‍💻 &#x1F4BB; &#x1F468;
+    <textarea class="openmoji-color">&#x00A9;&#x00AE;&#x1F0CF;
     </textarea>
-    <textarea class="openmoji-black">ABC 👨‍💻 &#x1F4BB; &#x1F468;
+    <textarea class="openmoji-black">&#x00A9;&#x00AE;&#x1F0CF;
     </textarea>
   </div>
 </body>
